[gd_scene load_steps=9 format=3 uid="uid://dpajkiy4fm8bv"]

[ext_resource type="Script" uid="uid://cwf6kane55wvv" path="res://LeverPuzzle.gd" id="1_ox5i1"]
[ext_resource type="Texture2D" uid="uid://dn7aaqag2lrnt" path="res://Lever Dirt-Sheet.png" id="2_5wk4t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2qbgm"]
size = Vector2(38, 240)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ox5i1"]
size = Vector2(44, 204.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm8nv"]
atlas = ExtResource("2_5wk4t")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gkta"]
atlas = ExtResource("2_5wk4t")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo467"]
atlas = ExtResource("2_5wk4t")
region = Rect2(100, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_ygqly"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm8nv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gkta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo467")
}],
"loop": false,
"name": &"on",
"speed": 5.0
}]

[node name="LeverPuzzle" type="Node2D"]
script = ExtResource("1_ox5i1")

[node name="Wall" type="StaticBody2D" parent="."]

[node name="WallCollider" type="CollisionShape2D" parent="Wall"]
position = Vector2(287, 492)
shape = SubResource("RectangleShape2D_2qbgm")

[node name="LeverArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeverArea"]
position = Vector2(211, 493.25)
shape = SubResource("RectangleShape2D_ox5i1")

[node name="CommandBox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 276.0
offset_top = 108.0
offset_right = 932.0
offset_bottom = 479.0

[node name="Panel" type="Panel" parent="CommandBox"]
layout_mode = 0
offset_left = -160.0
offset_top = 302.0
offset_right = 107.0
offset_bottom = 472.0

[node name="Label" type="Label" parent="CommandBox/Panel"]
layout_mode = 0
offset_left = -17.0
offset_top = 72.0
offset_right = 186.0
offset_bottom = 169.0
text = "Visible = "
horizontal_alignment = 1

[node name="InputBox" type="LineEdit" parent="CommandBox/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.041
anchor_bottom = 0.042
offset_left = 121.0
offset_top = 70.0
offset_right = 178.615
offset_bottom = 93.86

[node name="LeverSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(212, 583)
sprite_frames = SubResource("SpriteFrames_ygqly")
animation = &"on"
